# Sparkle

./: .gitignore  BUILD_BRIEF.md  README.md  gunicorn.conf.py  pyproject.toml  render.yaml  watchlist.yaml
.claude/: launch.json
.github/workflows/: daily.yml  hourly.yml  test.yml
data/: sketchhound.db
docs/: index.html
identify/: app.py  gunicorn.conf.py  render.yaml  requirements.txt
identify/templates/: base.html  dashboard.html  identify.html
scripts/: db_stats.py  demo_page.py
sketchhound/: __init__.py  config.py  dedup.py  fetch_ebay.py  fetch_estatesales.py  gate.py  http_util.py  models.py  normalize.py  persist.py  publish_page.py  push_alerts.py  run.py  vision_score.py
tests/: conftest.py  test_dedup.py  test_fetch_ebay.py  test_gate.py  test_normalize.py  test_persist.py  test_publish_page.py  test_push_alerts.py  test_scaffold.py  test_vision_score.py
