[project]
name = "sketchhound"
version = "0.1.0"
description = "Autonomous eBay acquisition scout for film costume design sketches"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "requests>=2.32",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "imagehash>=4.3",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sketchhound"]

[tool.pytest.ini_options]
testpaths = ["tests"]
